--- a/proyectos/proyecto-Android/Proyecto/app/src/main/res/layout-land/activity_segunda_pantalla.xml
+++ b/proyectos/proyecto-Android/Proyecto/app/src/main/res/layout-land/activity_segunda_pantalla.xml
@@ -31,7 +31,7 @@
         android:text="@string/nombre"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/editText4"
+        app:layout_constraintEnd_toStartOf="@+id/apellido"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
@@ -45,8 +45,8 @@
         android:text="@string/apellido"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toStartOf="@+id/editText5"
-        app:layout_constraintStart_toEndOf="@+id/editText4"
+        app:layout_constraintEnd_toStartOf="@+id/correo"
+        app:layout_constraintStart_toEndOf="@+id/apellido"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
@@ -58,10 +58,10 @@
         android:layout_marginBottom="32dp"
         android:text="Correo"
         android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toTopOf="@+id/editText6"
-        app:layout_constraintEnd_toStartOf="@+id/editText7"
-        app:layout_constraintStart_toEndOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText5"
+        app:layout_constraintBottom_toTopOf="@+id/telefono"
+        app:layout_constraintEnd_toStartOf="@+id/clave"
+        app:layout_constraintStart_toEndOf="@+id/nombre"
+        app:layout_constraintTop_toBottomOf="@+id/correo"
         tools:text="@string/correo" />
 
     <TextView
@@ -75,12 +75,12 @@
         android:text="@string/telefono"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
-        app:layout_constraintEnd_toStartOf="@+id/editText"
+        app:layout_constraintEnd_toStartOf="@+id/nombre"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/nombre"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="28dp"
@@ -89,10 +89,10 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView9"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toTopOf="@+id/editText7" />
+        app:layout_constraintTop_toTopOf="@+id/clave" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/apellido"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="2dp"
@@ -103,10 +103,10 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/editText5" />
+        app:layout_constraintTop_toTopOf="@+id/correo" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/correo"
         android:layout_width="0dp"
         android:layout_height="28dp"
         android:layout_marginTop="71dp"
@@ -118,7 +118,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/telefono"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="29dp"
@@ -137,10 +137,10 @@
         android:text="@string/Password"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/botonSegundaPantalla"
-        app:layout_constraintEnd_toStartOf="@+id/editText6" />
+        app:layout_constraintEnd_toStartOf="@+id/telefono" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/clave"
         android:layout_width="176dp"
         android:layout_height="28dp"
         android:layout_marginTop="55dp"
@@ -148,7 +148,7 @@
         android:layout_marginBottom="55dp"
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="@+id/editText6"
+        app:layout_constraintBottom_toBottomOf="@+id/telefono"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
