--- a/proyectos/proyecto-Android/Proyecto/app/src/main/res/layout/activity_cuarta_pantalla.xml
+++ b/proyectos/proyecto-Android/Proyecto/app/src/main/res/layout/activity_cuarta_pantalla.xml
@@ -20,11 +20,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/recibeDatos"
-        android:layout_width="100dp"
-        android:layout_height="69dp"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="79dp" />
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="186dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="87dp"
+        android:layout_marginBottom="57dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/men"
+        tools:srcCompat="@drawable/men" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="169dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="145dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:srcCompat="@drawable/women"
+        tools:srcCompat="@drawable/women" />
 
 </android.support.constraint.ConstraintLayout>
