--- a/02-android/2018MovilesGR2/app/src/main/res/layout/activity_main.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/layout/activity_main.xml
@@ -57,8 +57,8 @@
 
     <Button
         android:id="@+id/boton_ingreso"
-        android:layout_width="108dp"
-        android:layout_height="40dp"
+        android:layout_width="104dp"
+        android:layout_height="80dp"
         android:layout_marginTop="100dp"
         android:text="Intent Correo"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
@@ -90,7 +90,7 @@
     <Button
         android:id="@+id/Boton_intent_respuesta"
         android:layout_width="wrap_content"
-        android:layout_height="41dp"
+        android:layout_height="72dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="16dp"
@@ -101,24 +101,36 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="592dp"
-        tools:layout_editor_absoluteY="273dp" />
-
-    <Button
         android:id="@+id/ciclo_vida"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="81dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="8dp"
-        android:text="cliclo "
+        android:text="ciclo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.441"
         app:layout_constraintStart_toEndOf="@+id/boton_ingreso"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <Button
+        android:id="@+id/button_R_View"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="8dp"
+        android:text="R View"
+        app:layout_constraintEnd_toEndOf="@+id/boton_ingreso"
+        app:layout_constraintTop_toBottomOf="@+id/boton_ingreso" />
+
+    <Button
+        android:id="@+id/button_fragmentos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="27dp"
+        android:text="Fragmentos"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
