--- a/02-android/2018MovilesGR2/app/src/main/res/layout/activity_fragmentos.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/layout/activity_fragmentos.xml
@@ -6,19 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".FragmentosActivity">
 
-    <fragment
-        android:id="@+id/fragment_primer"
-        android:name="com.example.usrdel.a2018movilesgr2.PrimerFragment"
+    <Button
+        android:id="@+id/button_crear_segundo_fragmento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Segundo"
+        app:layout_constraintBottom_toBottomOf="@+id/button_crear_primer_fragmento"
+        app:layout_constraintStart_toEndOf="@+id/button_crear_primer_fragmento"
+        app:layout_constraintTop_toTopOf="@+id/button_crear_primer_fragmento"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button_crear_primer_fragmento"
@@ -26,9 +24,29 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="60dp"
         android:text="Primer"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.271"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RelativeLayout
+        android:id="@+id/relative_layout_fragmentos"
+        android:layout_width="368dp"
+        android:layout_height="387dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_crear_primer_fragmento"
+        app:layout_constraintVertical_bias="0.925">
+
+    </RelativeLayout>
+
+
 </android.support.constraint.ConstraintLayout>
