--- a/02-android/2018MovilesGR2/app/src/main/res/layout/fragment_primer.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/layout/fragment_primer.xml
@@ -12,4 +12,47 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="27dp"
+            android:layout_marginTop="55dp"
+            android:text="Nombre" />
+
+        <EditText
+            android:id="@+id/edit_text_nombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView6"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="52dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/edit_text_descripcion"
+            android:layout_alignStart="@+id/textView6"
+            android:text="Descripcion" />
+
+        <EditText
+            android:id="@+id/edit_text_descripcion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/edit_text_nombre"
+            android:layout_marginTop="93dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+    </RelativeLayout>
+
 </FrameLayout>
