--- a/02-android/2018MovilesGR2/app/src/main/res/layout/activity_fragmentos.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/layout/activity_fragmentos.xml
@@ -4,34 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentosActivity"
-    tools:layout_editor_absoluteY="81dp">
-
-    <fragment
-        android:id="@+id/fragment_primero"
-        android:name="com.example.viniq.a2018movilesgr2.PrimerFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="14dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".FragmentosActivity">
 
     <Button
-        android:id="@+id/button_crear_primer"
+        android:id="@+id/button_crear_segundo_fragmento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="8dp"
+        android:text="Segundo"
+        app:layout_constraintBottom_toBottomOf="@+id/button_crear_primer_fragmento"
+        app:layout_constraintStart_toEndOf="@+id/button_crear_primer_fragmento"
+        app:layout_constraintTop_toTopOf="@+id/button_crear_primer_fragmento"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/button_crear_primer_fragmento"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
         android:text="Primer"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_primero"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.271"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RelativeLayout
+        android:id="@+id/relative_layout_fragmentos"
+        android:layout_width="368dp"
+        android:layout_height="387dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_crear_primer_fragmento"
+        app:layout_constraintVertical_bias="0.925">
+
+    </RelativeLayout>
+
+
 </android.support.constraint.ConstraintLayout>
