--- a/02-android/2018MovilesGR2/app/src/main/res/values/texto.xml
+++ b/02-android/2018MovilesGR2/app/src/main/res/values/texto.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="textoPrincipal">Hello World!</string>
+    <string name="nombreMenu">Pokemon</string>
 </resources>
